resources/kube/manifests/javaSpringBoot.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${app}
  namespace: ${namespace}
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
      type: Recreate
  template:
    metadata:
      labels:
        app: ${app}
    spec:
      containers:
      - name: ${app}-test
        image: docker.kube.cloudapps.ms3-inc.com/${app}/dev:${GIT_COMMIT}
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret1
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  name: ${app}-service
  namespace: ${namespace}
spec:
  ports:
  - name: ${app}
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: ${app}
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${app}-dev-gateway
  namespace: ${namespace}
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: ${app}-http
      protocol: HTTP
    hosts:
    - "${app}-dev.kube.cloudapps.ms3-inc.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: ${app}-https
      protocol: HTTPS
    hosts:
    - "${app}-dev.kube.cloudapps.ms3-inc.com"
    tls:
      mode: SIMPLE
      credentialName: "cloudapps-wildcard"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${app}-dev-vs
  namespace: ${namespace}
spec:
  hosts:
  - "${app}-dev.kube.cloudapps.ms3-inc.com"
  gateways:
  - ${app}-dev-gateway
  http:
  - route:
    - destination:
        host: ${app}-service
        port:
          number: 8081
